--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -59,34 +59,32 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    @* @if (Context.Session.GetString("email") != null) *@
-                    
-                        <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1">
+                        @if (Context.Session.GetString("Token") != null)
+                        {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Index">Gestión de Usuarios</a>
+                                <a class="nav-link" asp-controller="Usuario" asp-action="Index">Gestión de Usuarios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Envio" asp-action="CreateEnvioComun">Registrar Envío Común</a>
+                                <a class="nav-link" asp-controller="Envio" asp-action="CreateEnvioComun">Registrar Envío Común</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Envio" asp-action="CreateEnvioUrgente">Registrar Envío Urgente</a>
+                                <a class="nav-link" asp-controller="Envio" asp-action="CreateEnvioUrgente">Registrar Envío Urgente</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Envio" asp-action="Index">Lista de Envíos</a>
+                                <a class="nav-link" asp-controller="Envio" asp-action="Index">Lista de Envíos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-danger" asp-controller="Usuario" asp-action="Logout">Logout</a>
                             </li>
-                        </ul>
-                    
-                    @* else *@
-                    
-                        <ul class="navbar-nav flex-grow-1">
+                        }
+                        else
+                        {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Login">Login</a>
+                                <a class="nav-link" asp-controller="Usuario" asp-action="Login">Login</a>
                             </li>
-                        </ul>
-                    
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
