--- a/MVC/Views/Envio/Index.cshtml
+++ b/MVC/Views/Envio/Index.cshtml
@@ -4,10 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="text-center my-4">Listado de Envíos</h1>
+<div class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="mb-0">Listado de Envíos</h1>
+    <a asp-action="MisEnvios" class="btn btn-primary">
+        <i class="bi bi-box-arrow-in-right me-1"></i> Mis Envíos
+    </a>
+</div>
 
 <p>
-    <a asp-action="CreateEnvioComun" class="btn btn-success mb-3">Crear Nuevo Envío Comun</a>
+    <a asp-action="CreateEnvioComun" class="btn btn-success mb-3">Crear Nuevo Envío Común</a>
     <a asp-action="CreateEnvioUrgente" class="btn btn-success mb-3">Crear Nuevo Envío Urgente</a>
 </p>
 
@@ -27,41 +32,28 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NroTracking)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Peso)
-                </td>   
-                <td>
-                    @Html.DisplayFor(modelItem => item.FuncionarioNombre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClienteNombre)
-                </td>
-                @* <td>
-                    @Html.DisplayFor(modelItem => item.Estado)
-                </td>
+                <td>@Html.DisplayFor(modelItem => item.NroTracking)</td>
+                <td>@Html.DisplayFor(modelItem => item.Peso)</td>
+                <td>@Html.DisplayFor(modelItem => item.FuncionarioNombre)</td>
+                <td>@Html.DisplayFor(modelItem => item.ClienteNombre)</td>
+                @* Comentado, si querés lo activás *@
+                @* <td>@Html.DisplayFor(modelItem => item.Estado)</td>
                 <td>
                     @if (item.Estado.ToString() == "En_Proceso")
                     {
                         <form asp-action="CambiarEstadoFinalizado" method="post">
-
                             <input type="hidden" name="NroTracking" value="@item.NroTracking" />
                             <button type="submit" class="btn btn-success">Finalizar</button>
                         </form>
                     }
                 </td> *@
-                <td>
-                    @Html.DisplayFor(modelItem => item.FechaEntrega)
-                </td>
+                <td>@Html.DisplayFor(modelItem => item.FechaEntrega)</td>
                 <td>
                     <div class="btn-group">
                         <a asp-action="AgregarSeguimiento" asp-route-envioId="@item.Id" class="btn btn-info btn-sm ml-2">Agregar Seguimiento</a>
                     </div>
                 </td>
             </tr>
-            
         }
     </tbody>
 </table>
