--- a/MVC/Views/Envio/CreateEnvioUrgente.cshtml
+++ b/MVC/Views/Envio/CreateEnvioUrgente.cshtml
@@ -60,6 +60,11 @@
                 <input asp-for="TiempoEntrega" class="form-control" />
                 <span asp-validation-for="TiempoEntrega" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="FechaEstimada" class="control-label"></label>
+                <input asp-for="FechaEstimada" type="date" class="form-control" min="@DateTime.Now.ToString("yyyy-MM-dd")" />
+                <span asp-validation-for="FechaEstimada" class="text-danger"></span>
+            </div>
             @* <div class="form-group">
                 <select asp-for="Estado" class="form-select my-3">
                     <option value="0">En Proceso</option>
