--- a/MVC/Views/Envio/MisEnvios.cshtml
+++ b/MVC/Views/Envio/MisEnvios.cshtml
@@ -5,6 +5,11 @@
 }
 
 <h1>MisEnvios</h1>
+<p>
+    <a asp-action="EnviosxFecha" asp-controller="Envio" class="btn btn-primary mb-3">
+        Buscar envíos por fecha
+    </a>
+</p>
 
 <table class="table">
     <thead>
@@ -15,6 +20,7 @@
             <th>@Html.DisplayNameFor(model => model.FuncionarioNombre)</th>
             <th>@Html.DisplayNameFor(model => model.ClienteNombre)</th>
             <th>@Html.DisplayNameFor(model => model.Estado)</th>
+            <th>@Html.DisplayNameFor(model => model.FechaEstimada)</th>
             <th>@Html.DisplayNameFor(model => model.FechaEntrega)</th>
             <th></th>
         </tr>
@@ -29,6 +35,7 @@
                 <td>@Html.DisplayFor(modelItem => item.FuncionarioNombre)</td>
                 <td>@Html.DisplayFor(modelItem => item.ClienteNombre)</td>
                 <td>@Html.DisplayFor(modelItem => item.Estado)</td>
+                <th>@Html.DisplayFor(model => item.FechaEstimada)</th>
                 <td>
                     @{
                         if (item.FechaEntrega == DateTime.MinValue)
