--- a/MVC/Views/Envio/MisEnvios.cshtml
+++ b/MVC/Views/Envio/MisEnvios.cshtml
@@ -4,12 +4,16 @@
     ViewData["Title"] = "MisEnvios";
 }
 
-<h1>MisEnvios</h1>
+<h1>Mis Envios</h1>
 <p>
     <a asp-action="EnviosxFecha" asp-controller="Envio" class="btn btn-primary mb-3">
         Buscar envíos por fecha
     </a>
+    <a asp-action="EnviosxComentario" asp-controller="Envio" class="btn btn-primary mb-3">
+        Buscar envíos por comentario
+    </a>
 </p>
+
 
 <table class="table">
     <thead>
