--- a/MVC/Views/Envio/MisEnvios.cshtml
+++ b/MVC/Views/Envio/MisEnvios.cshtml
@@ -12,6 +12,9 @@
     <a asp-action="EnviosxComentario" asp-controller="Envio" class="btn btn-primary mb-3">
         Buscar envíos por comentario
     </a>
+    <a asp-action="FindByNroTracking" asp-controller="Envio" class="btn btn-primary mb-3">
+        Buscar envíos por Numero Tracking
+    </a>
 </p>
 
 
