--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -75,6 +75,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" asp-controller="Envio" asp-action="MisEnvios">Mis Envíos</a>
                                 </li>
+                                <li>
+                                    <a class="nav-link" asp-controller="Usuario" asp-action="CambioPassword">Cambiar Contraseña</a>
+                                </li>
                             }
                             else if (rol == "Funcionario")
                             {
