--- a/MVC/Views/Envio/EnviosxFecha.cshtml
+++ b/MVC/Views/Envio/EnviosxFecha.cshtml
@@ -9,6 +9,14 @@
 <!-- Formulario para filtrar por fechas -->
 <form method="get" asp-action="EnviosxFecha" class="mb-3">
     <div class="row">
+        <div class="col-md-3">
+            <label for="estado" class="form-label">Estado:</label>
+            <select id="estado" name="estado" class="form-select">
+                <option value="" selected>-- Todos --</option>
+                <option value="0">En Proceso</option>
+                <option value="1">Finalizado</option>
+            </select>
+        </div>
         <div class="col-md-4">
             <label for="fechaInicio" class="form-label">Fecha Inicio:</label>
             <input type="date" id="fechaInicio" name="fechaInicio" class="form-control" required />
